--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+ /* for navbar color theme */
+#nav a.active {
+    border: 1px solid #797DFC;
+    background-color: transparent;
+    color: #797DFC;
+    font-weight: 700;
+    
+}
