--- a/src/index.css
+++ b/src/index.css
@@ -1,78 +1,132 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 
- /* for navbar color theme */
- #nav a.active {
-    border: 1px solid #797DFC;
-    background-color: transparent;
-    color: #797DFC;
-    font-weight: 700;
-    
+/* for navbar color theme */
+#nav a.active {
+  border: 1px solid #797DFC;
+  background-color: transparent;
+  color: #797DFC;
+  font-weight: 700;
+
 }
 
 
 .loader {
-    animation: rotate 1s infinite;
-    height: 50px;
-    width: 50px;
+  animation: rotate 1s infinite;
+  height: 50px;
+  width: 50px;
+}
+
+.loader:before,
+.loader:after {
+  border-radius: 50%;
+  content: "";
+  display: block;
+  height: 20px;
+  width: 20px;
+}
+
+.loader:before {
+  animation: ball1 1s infinite;
+  background-color: #eae9e9;
+  box-shadow: 30px 0 0 #797DFC;
+  margin-bottom: 10px;
+}
+
+.loader:after {
+  animation: ball2 1s infinite;
+  background-color: #797DFC;
+  box-shadow: 30px 0 0 #eae9e9;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg) scale(0.8)
   }
 
-  .loader:before,
-  .loader:after {
-    border-radius: 50%;
-    content: "";
-    display: block;
-    height: 20px;
-    width: 20px;
+  50% {
+    transform: rotate(360deg) scale(1.2)
   }
-  .loader:before {
-    animation: ball1 1s infinite;
-    background-color: #eae9e9;
+
+  100% {
+    transform: rotate(720deg) scale(0.8)
+  }
+}
+
+@keyframes ball1 {
+  0% {
+    box-shadow: 30px 0 0 #797DFC;
+  }
+
+  50% {
+    box-shadow: 0 0 0 #797DFC;
+    margin-bottom: 0;
+    transform: translate(15px, 15px);
+  }
+
+  100% {
     box-shadow: 30px 0 0 #797DFC;
     margin-bottom: 10px;
   }
-  .loader:after {
-    animation: ball2 1s infinite;
-    background-color: #797DFC;
+}
+
+@keyframes ball2 {
+  0% {
     box-shadow: 30px 0 0 #eae9e9;
   }
 
-  @keyframes rotate {
-    0% { transform: rotate(0deg) scale(0.8) }
-    50% { transform: rotate(360deg) scale(1.2) }
-    100% { transform: rotate(720deg) scale(0.8) }
+  50% {
+    box-shadow: 0 0 0 #eae9e9;
+    margin-top: -20px;
+    transform: translate(15px, 15px);
   }
 
-  @keyframes ball1 {
-    0% {
-      box-shadow: 30px 0 0 #797DFC;
-    }
-    50% {
-      box-shadow: 0 0 0 #797DFC;
-      margin-bottom: 0;
-      transform: translate(15px, 15px);
-    }
-    100% {
-      box-shadow: 30px 0 0 #797DFC;
-      margin-bottom: 10px;
-    }
+  100% {
+    box-shadow: 30px 0 0 #eae9e9;
+    margin-top: 0;
   }
+}
 
-  @keyframes ball2 {
-    0% {
-      box-shadow: 30px 0 0 #eae9e9;
-    }
-    50% {
-      box-shadow: 0 0 0 #eae9e9;
-      margin-top: -20px;
-      transform: translate(15px, 15px);
-    }
-    100% {
-      box-shadow: 30px 0 0 #eae9e9;
-      margin-top: 0;
-    }
+.loader2 {
+  font-size: 35px;
+  color: black;
+  display: inline-block;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  position: relative;
+}
+
+.loader2:after {
+  content: 'Loading';
+  position: relative;
+  z-index: 5;
+}
+
+.loader2:before {
+  content: '';
+  height: 6px;
+  border: 1px solid;
+  border-radius: 10px;
+  width: 100%;
+  position: absolute;
+  bottom: 0px;
+  background: linear-gradient(#FF3D00 100%, transparent 0) no-repeat;
+  background-size: 0% auto;
+  animation: 10s lineGrow linear infinite;
+}
+
+@keyframes lineGrow {
+  to {
+    background-size: 100% auto
   }
-  
+}
+
+@media screen and (min-width: 320px) and (max-width: 960px) {
+  .loader2 {
+    font-size: 25px;
+  }
+}
+
 
 
 @tailwind base;
