--- a/src/index.css
+++ b/src/index.css
@@ -110,7 +110,7 @@
   width: 100%;
   position: absolute;
   bottom: 0px;
-  background: linear-gradient(#FF3D00 100%, transparent 0) no-repeat;
+  background: linear-gradient(#797DFC 100%, transparent 0) no-repeat;
   background-size: 0% auto;
   animation: 10s lineGrow linear infinite;
 }
