--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 
+
 /* for navbar color theme */
 #nav a.active {
   border: 1px solid #797DFC;
@@ -89,7 +90,7 @@
 
 .loader2 {
   font-size: 35px;
-  color: black;
+  /* color: black; */
   display: inline-block;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 400;
